--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".SettingsActivity" >
         </activity>
+
+        <uses-permission android:name="android.permission.INTERNET" />
+
     </application>
 
 </manifest>
